--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
 	"main": "dist/src/index.js",
 	"types": "dist/src/index.d.ts",
 	"scripts": {
-		"test": "JWT_SECRET=somerandomsecret ts-mocha --config \"./.mocharc.js\"",
-		"test:debug": "JWT_SECRET=somerandomsecret ts-mocha --config \"./.mocharc.js\" --inspect",
-		"test:coverage": "JWT_SECRET=somerandomsecret nyc --reporter=lcov --temp-dir=\"./temp/.nyc_output\" ts-mocha --config \"./.mocharc.js\" --timeout=100000",
+		"test": "ts-mocha --config \"./.mocharc.js\"",
+		"test:debug": "ts-mocha --config \"./.mocharc.js\" --inspect",
+		"test:coverage": "nyc --reporter=lcov --temp-dir=\"./temp/.nyc_output\" ts-mocha --config \"./.mocharc.js\" --timeout=100000",
 		"lint": "eslint src tests --color --ext .js --ext .ts",
 		"lint:fix": "eslint src tests --color --ext .js --ext .ts --fix",
 		"lint:watch": "npm run lint -- --watch  --ext .js --ext .ts",
@@ -23,12 +23,18 @@
 	},
 	"devDependencies": {
 		"@goodrequest/eslint-config-typescript": "^1.2.1",
+		"@goodrequest/passport-jwt-wrapper": "^1.4.2",
 		"@types/chai": "^4.3.4",
 		"@types/express": "^4.17.15",
 		"@types/mocha": "^10.0.1",
 		"@types/node": "^18.11.18",
+		"@types/pg": "^8.6.6",
+		"@types/sequelize": "^4.28.14",
 		"@types/supertest": "^2.0.12",
+		"@types/uuid": "^9.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.48.2",
+		"chai": "^4.3.7",
+		"dotenv": "^16.0.3",
 		"eslint": "8.33.0",
 		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-prettier": "^4.2.1",
@@ -38,9 +44,13 @@
 		"supertest": "^6.3.3",
 		"ts-mocha": "^10.0.0",
 		"ts-node": "^10.9.1",
-		"typescript": "^4.9.4"
+		"typescript": "^4.9.4",
+		"uuid": "^9.0.0"
 	},
 	"dependencies": {
-		"express": "^4.18.2"
+		"@goodrequest/user-repository-sequelize": "file:repos/user-repositories/user-repository-sequelize",
+		"express": "^4.18.2",
+		"pg": "^8.10.0",
+		"sequelize": "6.9.0"
 	}
 }
