--- a/package.json
+++ b/package.json
@@ -1,56 +1,42 @@
 {
-	"name": "@goodrequest/ts-library-template",
+	"name": "@goodrequest/refresh-token-repository-tests",
 	"version": "0.0.1",
 	"description": "",
-	"main": "dist/src/index.js",
-	"types": "dist/src/index.d.ts",
+	"main": "src/index.ts",
+	"types": "src/index.ts",
 	"scripts": {
 		"test": "ts-mocha --config \"./.mocharc.js\"",
 		"test:debug": "ts-mocha --config \"./.mocharc.js\" --inspect",
 		"test:coverage": "nyc --reporter=lcov --temp-dir=\"./temp/.nyc_output\" ts-mocha --config \"./.mocharc.js\" --timeout=100000",
 		"lint": "eslint src tests --color --ext .js --ext .ts",
 		"lint:fix": "eslint src tests --color --ext .js --ext .ts --fix",
-		"lint:watch": "npm run lint -- --watch  --ext .js --ext .ts",
-		"prebuild": "rm -rf dist",
-		"build": "tsc"
+		"lint:watch": "npm run lint -- --watch  --ext .js --ext .ts"
 	},
 	"keywords": [],
 	"author": "Juraj Chripko <juraj.chripko@goodrequest.com>",
 	"license": "ISC",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/GoodRequest/passport-jwt-wrapper"
+		"url": "https://github.com/GoodRequest/refresh-token-repository-tests"
 	},
 	"devDependencies": {
 		"@goodrequest/eslint-config-typescript": "^1.2.1",
-		"@goodrequest/passport-jwt-wrapper": "^1.4.2",
+		"@goodrequest/passport-jwt-wrapper": "1.4.0",
 		"@types/chai": "^4.3.4",
-		"@types/express": "^4.17.15",
 		"@types/mocha": "^10.0.1",
 		"@types/node": "^18.11.18",
-		"@types/pg": "^8.6.6",
-		"@types/sequelize": "^4.28.14",
-		"@types/supertest": "^2.0.12",
 		"@types/uuid": "^9.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.48.2",
 		"chai": "^4.3.7",
-		"dotenv": "^16.0.3",
 		"eslint": "8.33.0",
 		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-prettier": "^4.2.1",
 		"mocha": "^10.2.0",
 		"nyc": "^15.1.0",
 		"prettier": "^2.8.3",
-		"supertest": "^6.3.3",
 		"ts-mocha": "^10.0.0",
 		"ts-node": "^10.9.1",
 		"typescript": "^4.9.4",
 		"uuid": "^9.0.0"
-	},
-	"dependencies": {
-		"@goodrequest/user-repository-sequelize": "file:repos/user-repositories/user-repository-sequelize",
-		"express": "^4.18.2",
-		"pg": "^8.10.0",
-		"sequelize": "6.9.0"
 	}
 }
